--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,135 @@
     <string name="action_settings">Settings</string>
     <string name="action_delete">Delete</string>
 
+    <string name="hello_world">Hello world!</string>
+
+    <string name="title_activity_recruiter_calls_details">RecruiterCallsDetails</string>
+    <string name="recruiter_contact_number"/>
+    <string name="title_activity_splash_screen">SplashScreenActivity</string>
+    <string name="title_activity_recruiter_calls_log">Recruiter Calls Log</string>
+    <string name="title_activity_recruiter_call_dates">RecruiterCallDatesActivity</string>
+    <string name="title_activity_recruiter_call_information">RecruiterCallInformationActivity</string>
+
+    <string-array name="drawer_items">
+        <item>Todo List</item>
+        <item>Recruiters</item>
+        <item>Job Positions</item>
+        <item>Employers</item>
+        <item>Interviews</item>
+    </string-array>
+
+    <string name="title_activity_job_positions">JobPositionsActivity</string>
+
+    <string name="title_activity_employers">EmployersActivity</string>
+    <string name="title_activity_interviews">InterviewsActivity</string>
+    <string name="title_activity_recruiter_info">RecruiterInfoActivity</string>
+    <string name="title_activity_employers_fragment">EmployersFragment</string>
+    <string name="title_activity_recruiter_calls_todo_list">RecruiterCallsTodoList</string>
+
+    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
+
+
+    <string name="title_activity_recruiter_preferences">RecruiterPreferences</string>
+
+    <!-- Strings related to Settings -->
+
+    <!-- Example General settings -->
+    <string name="pref_header_general">General</string>
+
+    <string name="pref_title_social_recommendations">Enable social recommendations</string>
+    <string name="pref_description_social_recommendations">Recommendations for people to contact
+        based on your message history
+    </string>
+
+    <string name="pref_title_display_name">Display name</string>
+    <string name="pref_default_display_name">John Smith</string>
+
+    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
+    <string-array name="pref_example_list_titles">
+        <item>Always</item>
+        <item>When possible</item>
+        <item>Never</item>
+    </string-array>
+    <string-array name="pref_example_list_values">
+        <item>1</item>
+        <item>0</item>
+        <item>-1</item>
+    </string-array>
+
+    <!-- Example settings for Data & Sync -->
+    <string name="pref_header_data_sync">Data &amp; sync</string>
+
+    <string name="pref_title_sync_frequency">Sync frequency</string>
+    <string-array name="pref_sync_frequency_titles">
+        <item>15 minutes</item>
+        <item>30 minutes</item>
+        <item>1 hour</item>
+        <item>3 hours</item>
+        <item>6 hours</item>
+        <item>Never</item>
+    </string-array>
+    <string-array name="pref_sync_frequency_values">
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+        <item>180</item>
+        <item>360</item>
+        <item>-1</item>
+    </string-array>
+
+    <string-array name="list_preference_entries">
+        <item>Entry 1</item>
+        <item>Entry 2</item>
+        <item>Entry 3</item>
+    </string-array>
+
+    <string-array name="list_preference_entry_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string-array name="multi_select_list_preference_default_value"/>
+
+    <string name="pref_title_system_sync_settings">System sync settings</string>
+
+    <!-- Example settings for Notifications -->
+    <string name="pref_header_notifications">Notifications</string>
+
+    <string name="pref_title_new_message_notifications">New message notifications</string>
+
+    <string name="pref_title_ringtone">Ringtone</string>
+    <string name="pref_ringtone_silent">Silent</string>
+
+    <string name="pref_title_vibrate">Vibrate</string>
+    <string name="add_interview">Add Interview</string>
+    <string name="add_call">Add Call</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string-array name="calls">
+        <item>Calls</item>
+        <item>Manage Phone Calls</item>
+    </string-array>
+    <string-array name="interviews">
+        <item>Interviews</item>
+        <item>Manage Interviews</item>
+    </string-array>
+    <string-array name="job_positions">
+        <item>Job Positions</item>
+        <item>Manage Job Positions</item>
+    </string-array>
+    <string-array name="recruiters">
+        <item>Recruiters</item>
+        <item>Manage Recruiters</item>
+    </string-array>
+    <string-array name="staffing_companies">
+        <item>Staffing Companies</item>
+        <item>Manage Staffing Companies</item>
+    </string-array>
+
+
+
 </resources>
